trunk/Archive/ebed6376ef6dc61cb817fc50fa8dd96d-5bfb4a3ecda91a191e93557cbeaa6247/output
+ g++-4.8 -std=c++1y -O3 -Wno-missing-field-initializers -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp: In instantiation of 'void foo(Ts ...) [with Ts = {int}]':
main.cpp:21:10:   required from here
main.cpp:16:5: error: static assertion failed: Not all std::string
     static_assert(AllStdString<Ts...>::value, "Not all std::string");
     ^
